--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
     <!-- Commentary box -->
-        <div class='commentary'>
+        <div class='commentaryBox'>
             <span id='firstLine'></span><br>
             <span id='secondLine'></span>
         </div>
@@ -117,14 +117,44 @@
 
     </div>
 
+    <!-- The game data -->
+    <script src='gamedata.js'></script>
+
+    <!-- Common data -->
+    <script src='centraldata.js'></script>
+
     <!-- The game board object -->
     <script src='board.js'></script>
+
+    <!-- The game board map graphics object -->
+    <script src='boarddisplay.js'></script>
+
+    <!-- The game board SVG graphics object -->
+    <script src='svgdisplay.js'></script>
+
+    <!-- The game board pieces object -->
+    <script src='piece.js'></script>
+
+    <!-- The game board holder object -->
+    <script src='boardholder.js'></script>
+
+    <!-- The move creation object -->
+    <script src='move.js'></script>
+
+    <!-- The game board pieces graphics object -->
+    <script src='piecedisplay.js'></script>
+
+    <!-- The goods icons graphics object -->
+    <script src='icons.js'></script>
 
     <!-- The dashboard object -->
     <script src='dashboard.js'></script>
 
     <!-- The compass object -->
     <script src='compass.js'></script>
+
+    <!-- The game commentary object -->
+    <script src='commentary.js'></script>
 
     <!-- The resource object -->
     <script src='resource.js'></script>
@@ -135,6 +165,9 @@
     <!-- The piece movement object -->
     <script src='movement.js'></script>
 
+    <!-- The human movement object -->
+    <script src='human.js'></script>
+
     <!-- The pirates object -->
     <script src='pirates.js'></script>
 
@@ -143,6 +176,9 @@
 
     <!-- The game management object -->
     <script src='gamemanagement.js'></script>
+
+    <!-- The settings object -->
+    <script src='settings.js'></script>
 
     <!-- The building object -->
     <script src='build.js'></script>
